changed home page and added menu functionality

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,3 @@
 <h1>How can we be of assistance?</h1>
 <p>Contact us at grandbudapestcafe@gmail.com</p>
+<img src='http://www.caribbeannewsdigital.com/en/sites/default/files/en/imagenes_noticias/waiter.jpg'>
