--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h1>Who we are</h1>
-<p>Grand Budapest Cafe is a luxury concierge service. There is no need we can't fill.</p>
+<p>Grand Budapest Cafe is a luxury concierge service. We scour the world so you don't have to.</p>
