--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,36 +5,61 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+ <%= render 'layouts/bootstrap' %>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400;300' rel='stylesheet' type='text/css'>
-    <link href='style.css' rel='stylesheet'>
+    <link href='application.css' rel='stylesheet'>
+
 
     <div class="menu">
       
       <!-- Menu icon -->
       <div class="icon-close">
         <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/close.png">
+      <!--  <img src="http://i.istockimg.com/file_thumbview_approve/55894538/3/stock-photo-55894538-waiter-serving-empty-platter.jpg"> -->
       </div>
 
       <!-- Menu -->
       <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Shop</a></li>
+        <li><a href="#"><i class="fa fa-eye"></i> About</a></li>
+        <li><a href="#"><i class="fa fa-male"></i> Services </a></li>
+        <li><a href="#"><i class="fa fa-shopping-cart"> Shop  </i></a></li>
+        <li><a href="#"><i class="fa fa-envelope"></i>  Contact </a></li>
       </ul>
     </div>
 
+
     <!-- Main body -->
     <div class="jumbotron">
-
+<div class="container">
       <div class="icon-menu">
         <i class="fa fa-bars"></i>
         Welcome
       </div>
+  </div>
+
     
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="app.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>   <script src="application.js"></script>
+
+    <div id="myModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Confirmation</h4>
+            </div>
+            <div class="modal-body">
+                <p>Do you want to save changes you made to document before closing?</p>
+                <p class="text-warning"><small>If you don't save, your changes will be lost.</small></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
   </body>
 </html>
 </head>
