--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       <ul>
         <li><a href="#"><i class="fa fa-eye"></i> About</a></li>
         <li><a href="#"><i class="fa fa-male"></i> Services </a></li>
-        <li><a href="#"><i class="fa fa-shopping-cart"> Shop  </i></a></li>
+        <li><a href="products/:id"><i class="fa fa-shopping-cart"> Shop  </i></a></li>
         <li><a href="#"><i class="fa fa-envelope"></i>  Contact </a></li>
       </ul>
     </div>
