--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,21 +11,21 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class:"form-control" %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_field :description %>
+    <%= f.text_field :description, class: "form-control" %>
   </div>
   <div class="field">
     <%= f.label :country_origin %><br>
-    <%= f.text_field :country_origin %>
+    <%= f.text_field :country_origin, class: "form-control"%>
   </div>
   <div class="field">
     <%= f.label :price %><br>
-    <%= f.text_field :price %>
+    <%= f.text_field :price,  class: "form-control"%>
   </div>
   <div class="actions">
     <%= f.submit %>
